<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="RelativeOverlap">

    <android.support.v7.widget.CardView
        android:id="@+id/app_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="6dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:singleLine="true"
                android:textSize="24sp"
                tools:text="App" />

            <TextView
                android:id="@+id/txtApk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:fontFamily="sans-serif-thin"
                android:textSize="16sp"
                tools:text="Package" />

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignTop="@+id/txtName"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:scaleType="center"
                android:src="@drawable/ic_android"
                android:transitionName="@string/transition_app_icon"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="78dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnExtract"
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:background="@color/colorPrimary"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/button_extract"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/btnShare"
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorPrimary"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/button_share"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>